--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@
 server.port=8090
 spring.activemq.broker-url=tcp://localhost:61616
 
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=afroboot
+
+
 spring.mail.host=mail.blaqueyard.com
 spring.mail.port=587
 spring.mail.username=info@blaqueyard.com
