--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,33 @@ log4j.rootLogger=WARN, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.conversionPattern=%5p [%t] (%F:%L) - %m%n
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2000MB
+# Max file size.
+spring.servlet.multipart.max-file-size=2000MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=2000MB
+
+
+
+# Message Queue specific configs for app1
+app1.exchange.name=app1-exchange
+app1.queue.name=app1-queue
+app1.routing.key=app1-routing-key
+# Message Queue specific configs for app2
+app2.exchange.name=app2-exchange
+app2.queue.name=app2-queue
+app2.routing.key=app2-routing-key
+#AMQP RabbitMQ configuration
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+# Additional RabbitMQ properties
+spring.rabbitmq.listener.simple.concurrency=4
+spring.rabbitmq.listener.simple.max-concurrency=8
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
