--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/afroboot
 spring.datasource.username=postgres
-spring.datasource.password=menty44
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -83,6 +83,7 @@ app1.routing.key=app1-routing-key
 app2.exchange.name=app2-exchange
 app2.queue.name=app2-queue
 app2.routing.key=app2-routing-key
+
 #AMQP RabbitMQ configuration
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
