--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,4 +91,5 @@ spring.rabbitmq.password=guest
 # Additional RabbitMQ properties
 spring.rabbitmq.listener.simple.concurrency=4
 spring.rabbitmq.listener.simple.max-concurrency=8
+spring.rabbitmq.listener.simple.retry.max-attempts=3
 spring.rabbitmq.listener.simple.retry.initial-interval=5000
